--- a/syntax_directed_parser/lib/dune
+++ b/syntax_directed_parser/lib/dune
@@ -1,4 +1,6 @@
 (library
- (name syntax_directed_parser)
- (libraries core)
- (modules lexer token))
+  (name syntax_directed_parser)
+  (libraries core core_unix alcotest)
+  (modules lexer token)
+  (preprocess (pps ppx_deriving.show ppx_deriving.ord)))
+
