--- a/syntax_directed_parser/dune-project
+++ b/syntax_directed_parser/dune-project
@@ -15,6 +15,8 @@
 
 (documentation https://url/to/documentation)
 
+(map_workspace_root false)
+
 (package
  (name syntax_directed_parser)
  (synopsis "Syntax-directed parser as presented in the Dragon Book, with my own twists.")
